# ureflect

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yaml
.github/workflows/: docs.yaml
cmake/: ureflectConfig.cmake.in
docs/: concepts.md  enum.md  for-each-field.md  index.md  integration-json.md  integration-openapi.md  integration-sql.md  member-info.md  performance.md  quickstart.md  tie.md  typeinfo.md
examples/: json_to_struct.h  main.cpp
include/ureflect/: ureflect_auto.h
src/ureflect/: ureflect_auto.cpp
